--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -4,4 +4,13 @@
 # directory.  You are also encouraged to edit it as you like.
 
 # Configure the console as our one appender
-log4j.appender.A1=org.apache.log4j.Console
+log4j.appender.A1=org.apache.log4j.ConsoleAppender
+log4j.appender.A1.layout=org.apache.log4j.PatternLayout
+log4j.appender.A1.layout.ConversionPattern=%d{HH:mm:ss,SSS} %-5p [%c] - %m%n
+
+# tighten logging on the DataNucleus Categories
+log4j.category.DataNucleus.JDO=WARN, A1
+log4j.category.DataNucleus.Persistence=WARN, A1
+log4j.category.DataNucleus.Cache=WARN, A1
+log4j.category.DataNucleus.MetaData=WARN, A1
+l
