--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -13,4 +13,11 @@ log4j.category.DataNucleus.JDO=WARN, A1
 log4j.category.DataNucleus.Persistence=WARN, A1
 log4j.category.DataNucleus.Cache=WARN, A1
 log4j.category.DataNucleus.MetaData=WARN, A1
-l
+log4j.category.DataNucleus.General=WARN, A1
+log4j.category.DataNucleus.Utility=WARN, A1
+log4j.category.DataNucleus.Transaction=WARN, A1
+log4j.category.DataNucleus.Datastore=WARN, A1
+log4j.category.DataNucleus.ClassLoading=WARN, A1
+log4j.category.DataNucleus.Plugin=WARN, A1
+log4j.category.DataNucleus.ValueGeneration=WARN, A1
+log4j.category.DataNucleus.Enhancer=WARN, 
