--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -20,4 +20,5 @@ log4j.category.DataNucleus.Datastore=WARN, A1
 log4j.category.DataNucleus.ClassLoading=WARN, A1
 log4j.category.DataNucleus.Plugin=WARN, A1
 log4j.category.DataNucleus.ValueGeneration=WARN, A1
-log4j.category.DataNucleus.Enhancer=WARN, 
+log4j.category.DataNucleus.Enhancer=WARN, A1
+log4j.category.DataNucleus.SchemaTool=WARN, A1
